# FizzBuzz

./: Pipfile  README.md  coverage.json  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_constants_py.html  fizzbuzz.py  fizzbuzz_py.html  index.html  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  status.json  test_fizzbuzz.py  test_fizzbuzz_py.html
.github/workflow/: flow.yml
.github/workflows/: flow.yml
src/fizzbuzz/: fizzbuzz.py
tests/: conftest.py  constants.py  test_fizzbuzz.py
