[metadata]
name = fizzbuzz
description = FizzBuzz number game
author = Kostiantyn Gurianov
platforms = unix,linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    fizzbuzz
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=2.0
    mypy>=0.910
    ruff>=0.0.272
    tox>=3.24

[options.package_data]
slapping = py.typed


